resources/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: databases
  namespace: application
spec:
  replicas: 1
  serviceName: databases-statefulset
  selector:
    matchLabels:
      app: databases-db
  template:
    metadata:
      labels:
        app: databases-db
    spec:
      containers:
        - name: databases-db
          image: yonatankaplounov/appdatabase:final        
          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
            requests:
              cpu: "0.1"
              memory: "256Mi"

          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: mysql-init-config  
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Mi           

              
      #     volumeMounts:
      #       - name: data-volume
      #         mountPath: /var/lib/mysql
      # volumes:
      #   - name: data-volume
