resources/authdb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db-deployment
spec:
  replicas: 1
  serviceName: auth-db-statefulset   
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: yonatankaplounov/empdb:final
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service-lb
spec:
  selector:
    app: auth-db              
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
