resources/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: databases-service
  namespace: application
spec:
  selector:
    app: databases-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
