resources/databases.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: databases
spec:
  replicas: 1
  serviceName: databases-statefulset
  selector:
    matchLabels:
      app: databases-db
  template:
    metadata:
      labels:
        app: databases-db
    spec:
      containers:
        - name: databases-db
          image: yonatankaplounov/appdatabase:final        
---
apiVersion: v1
kind: Service
metadata:
  name: databases-service
spec:
  selector:
    app: databases-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: guitar-db-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 0.5Gi
#   volumeName: guitar-db
